Fixed API path for Vercel

--- a/vercel.json
+++ b/vercel.json
@@ -1,5 +1,16 @@
 {
-    "REWRITES":[{
-        "SOURCE":"/(.*)","DESTINATION":"/"
-    }]
-}
+    "version": 2,
+    "builds": [
+      {
+        "src": "api/*.js",
+        "use": "@vercel/node"
+      }
+    ],
+    "routes": [
+      {
+        "src": "/api/(.*)",
+        "dest": "/api/$1"
+      }
+    ]
+  }
+  
