--- a/frontend/vercel.json
+++ b/frontend/vercel.json
@@ -10,8 +10,9 @@
   "rewrites": [
     {
       "source": "/api/(.*)",
-      "destination": "https://keystokes-collection.vercel.app/"
-    },
+      "destination": "https://keystokes-collection.vercel.app/api/$1"
+    }
+    ,
     {
       "source": "/(.*)",
       "destination": "/index.html"
